Review fixes: dataset-removal phantom undo entry, snapshot source order, seam pins
The agent review of the two undo/reset commits found one genuine bug and
several hardening items.

The bug: removing a loaded dataset pushed TWO history entries differing
only in checkedSources -- removeSeriesFromAllTabs pushed while the tab
record still held the dead DatasetSource, then the tree removePath fired
the tick listener whose trailing pushTargetTabHistory pushed again with
it scrubbed. First Undo press after a dataset removal visibly did
nothing. Run removal never had the problem purely because its operations
run tree-first; dataset removal now uses the same order (tree node out
first, so the listener's single push captures both deltas and everything
after dedupes or stays silent-by-design).

PlotState now preserves checked-source ORDER through snapshots
(LinkedHashSet copy instead of Set.copyOf, whose iteration order is
salt-randomised per JVM): order is load-bearing -- it drives the outputs
tree's section order -- and an undo was able to reorder a multi-source
tab's sections. Pinned.

PlotPanel.undo()/redo() javadoc now warns that tree resync lives at the
call-site seam (toolbar -> syncTabSelectionFromPlotState): a future direct
caller (e.g. a Ctrl+Z binding) must route the returned state through it.
notifyTabMutated's javadoc notes the accepted consequence for background
tabs of the silent removal paths. The unresolvable {@link RunSource} is
fully qualified, and the new PlotPanel code uses the file's existing
imports instead of FQNs.

New pins: stats-tab reset notifies and clears (the branch was wholly
untested); undo-of-reset restores the full pre-reset view -- series,
sources, and a notification (the headline scenario, previously asserted
only in prose); construction snapshot preserves source order.

Known and accepted, per the silent-failure decision: a background tab's
silently-scrubbed record can bundle into its next unrelated push; run
launch auto-selecting its sou